dynamic api endpoint for swagger, new clab format for inspect
